--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-MYSQL_PASSWORD=secure-password
-MYSQL_ROOT_PASSWORD=even-more-secure.password
-MYSQL_DATABASE=nextcloud
-MYSQL_USER=nextcloud
+DB_NAME=base
+DB_ROOT_PASSWORD=admin
+DB_USER=admin
+DB_PASSWORD=admin
+DB_HOSTNAME=mariadb
