--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - 8081:80
     environment:
-     - WORDPRESS_DB_HOST=mariadb
+     - WORDPRESS_DB_HOST=${DB_HOSTNAME}
      - WORDPRESS_DB_USER=admin
      - WORDPRESS_DB_PASSWORD=admin
      - WORDPRESS_DB_NAME=base
@@ -21,15 +21,15 @@ services:
 
   database:
     image: mariadb:latest
-    hostname: mariadb
+    hostname: ${DB_HOSTNAME}
     restart: always
     container_name: base
     ports: ["3309:3306"]
     environment:
-      - MYSQL_DATABASE=base
-      - MYSQL_ROOT_PASSWORD=admin
-      - MYSQL_USER=admin
-      - MYSQL_PASSWORD=admin
+      - MYSQL_DATABASE=${DB_NAME}
+      - MYSQL_ROOT_PASSWORD=${DB_ROOT_PASSWORD}
+      - MYSQL_USER=${DB_USER}
+      - MYSQL_PASSWORD=${DB_PASSWORD}
     networks:
       - base-network
     volumes:
@@ -47,13 +47,8 @@ services:
       - base-network
 
 
+
     
-
-
-
-
-
-
 
 
 
